Finish web component

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <title>Demo Dile Product demo</title>
 </head>
 <body>
     
-<dile-product-card></dile-product-card>
+<dile-product-card link_producto="https://escuela.it/" img_src="/img/camara.jpg" img_alt="Image alt" product_title="Nombre del producto" product_text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium a quod asperiores qui amet saepe quibusdam voluptas vel?" product_price="0000 €" btn_text="Comprar"></dile-product-card>
 
 <script src="../dile-product-card.js" type="module"></script>
 </body>
